Remove unnecessary codes

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .container {
-    background-color: rgb(121, 55, 75);
     max-width: 1068px;
     margin: auto;
+    padding: 20px;
     width: 100%;
 }
 
@@ -24,12 +24,12 @@
     align-items: center;
     justify-content: center;
 
-    height: 180px;
+    height: 150px;
     width: 60%;
     padding: 20px;
     column-gap: 20px;
 
-    border-color: brown;
+    border-color: azure;
     border-style: solid;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -40,6 +40,7 @@
     row-gap: 12px;
     font-size: 64px;
     font-weight: 900;
+    margin-top: -1rem;
 }
 .timerBox-text {
     position: absolute;
@@ -66,8 +67,13 @@
     padding: 12px;
 }
 
-.mainText {
+.firstText {
+    font-weight: 900;
+    column-gap: 2px;
+}
 
+.secondText {
+    font-weight: 400;
 }
 
 .thirdText {
@@ -79,14 +85,19 @@
     display: none;
 }
 @media (max-width: 800px) {
+    .container {
+        max-width: 600px;
+    }
     .timerBox {
         height: 350px;
-        width: 50%;
-    }
-    #force-line-break {
-        display: flex;
+        width: 280px;
     }
     #middle-colon {
         display: none;
+    }
+}
+@media (max-width: 600px) {
+    .container {
+        max-width: 500px;
     }
 }
